<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreenFull"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FullscreenActivity" >

    <ImageView
        android:id="@+id/imageHomeScreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/texthowToPlay"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/catchmehomescreen" />

    <ViewSwitcher
        android:id="@+id/flipView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/startingView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            tools:ignore="UselessParent" >

            <RelativeLayout
                android:id="@+id/wholeScreen1"
                android:layout_width="fill_parent"
                android:layout_height="500dp"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/buttonStartGame"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/textStartGame"
                        android:onClick="launchGame"
                        android:src="@drawable/button_startgame" />

                    <ImageView
                        android:id="@+id/buttonHighScores"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/texthowToPlay"
                        android:onClick="showHighScores"
                        android:src="@drawable/button_highscore" />

                    <ImageView
                        android:id="@+id/buttonOptions"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@+id/adLinearLayout"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/texthowToPlay"
                        android:onClick="flipToMenu"
                        android:src="@drawable/button_options" />

                    <ImageView
                        android:id="@+id/buttonHowToPlay"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/texthowToPlay"
                        android:onClick="howToPlay"
                        android:src="@drawable/button_howtoplay" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/menuView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fitsSystemWindows="true"
            tools:ignore="UselessParent" >

            <RelativeLayout
                android:id="@+id/wholeScreen2"
                android:layout_width="fill_parent"
                android:layout_height="524dp"
                android:background="@color/black_overlay"
                android:onClick="flipToHome"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textSoundEffects"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ToggleButton
                                android:id="@+id/toggleSound"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/textSoundEffects" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textTiltSensitivity"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ToggleButton
                                android:id="@+id/toggleSensitivity"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/textTiltSensitivity"
                                android:textOff="@string/textLow"
                                android:textOn="@string/textHigh" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textInvertTilt"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ToggleButton
                                android:id="@+id/buttInvertTilt"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/textSoundEffects" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textMusic"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ToggleButton
                                android:id="@+id/toggleMusic"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/textMusic" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/labelVibrate"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/textVibrate"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" >

                            <ToggleButton
                                android:id="@+id/toggleVibrate"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:text="@string/textSoundEffects" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>

        
    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/adLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" >

    </LinearLayout>

</RelativeLayout>